--- a/.storybook/global.css
+++ b/.storybook/global.css
@@ -2,4 +2,5 @@ body {
   font-size: 16px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  margin: 0;
 }
